# TelExamAgent

./: .gitignore  README.md  nixpacks.toml  pyproject.toml  requirements.txt
app/: main.py
app/models/: session.py
app/services/: barrier_detector.py  interview_context.py  interview_planner.py  llm.py  pdf_generator.py  report.py  session_storage.py  stt.py  tts.py  vad.py
app/static/: index.html  report.html  reports.html  tts-test.html
app/utils/: audio.py
docs/: SETUP_GUIDE.md
presentation/: slides.md
tests/: test_extraction.py
