[project]
name = "telexam-agent"
version = "0.1.0"
description = "Diabetes Checkup Voicebot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "websockets==12.0",
    "python-dotenv==1.0.1",
    "twilio==8.12.0",
    "requests==2.31.0",
    "numpy==1.26.4",
    "deepgram-sdk==3.2.0",
    "openai>=1.40.0",
    "scipy==1.12.0",
    "pydub==0.25.1",
    "torch==2.2.0",
    "torchaudio==2.2.0",
    "reportlab==4.0.7",
]

[tool.uv]
dev-dependencies = []

